daemonset.yml
---
apiVersion: apps/v1
kind: DaemonSet
metadata:
    name: node-exporter
    labels:
        app: node-exporter
spec:
    updateStrategy:
        rollingUpdate:
            maxUnavailable: 1
            type: RollingUpdate
    selector:
        matchLabels:
            app: node-exporter
    template:
        metadata:
            labels:
                app: node-exporter
        spec:
            containers:
                - args:
                      - --web.listen-address=0.0.0.0:9101
                      - --path.procfs=/host/proc
                      - --path.sysfs=/host/sys
                      - --collector.filesystem.ignored-mount-points=^/(dev|proc|sys|var/lib/docker/.+)($|/)
                      - --collector.filesystem.ignored-fs-types=^(autofs|binfmt_misc|cgroup|configfs|debugfs|devtmpfs|fusectl|hugetlbfs|mqueue|overlay|proc|procfs|pstore|rpc_pipefs|securityfs|sysfs|tracefs)$
                  image: quay.io/prometheus/node-exporter:v0.16.0
                  imagePullPolicy: IfNotPresent
                  name: node-exporter
                  volumeMounts:
                      - name: proc
                        mountPath: /host/proc
                      - name: sys
                        mountPath: /host/sys
                      - name: root
                        mountPath: /host/root
                        readOnly: true
            hostNetwork: true
            hostPID: true
            nodeSelector:
                beta.kubernetes.io/os: linux
            securityContext:
                runAsNonRoot: true
                runAsUser: 65534
            tolerations:
                - effect: NoSchedule
                  operator: Exists
            volumes:
                - hostPath:
                      path: /proc
                      type: ""
                  name: proc
                - hostPath:
                      path: /sys
                      type: ""
                  name: sys
                - hostPath:
                      path: /
                      type: ""
                  name: root
