deployment-mongo-express.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
    name: mongodb-express
    labels:
        app: mongo-express
spec:
    replicas: 1
    selector:
        matchLabels:
            app: mongo-express
    template:
        metadata:
            labels:
                app: mongo-express
        spec:
            containers:
                - image: mongo-express:0.54
                  name: mongo-express
                  ports:
                      - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
    name: mongodb-express-service
spec:
    selector:
        app: mongo-express
    ports:
        - protocol: TCP
          port: 8081
          targetPort: 8081
