deployment-mongo.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
    name: mongodb-deployment
    labels:
        app: mongodb
spec:
    replicas: 1
    selector:
        matchLabels:
            app: mongodb
    template:
        metadata:
            labels:
                app: mongodb
        spec:
            containers:
                - image: mongo:6.0.3
                  name: mongodb
                  ports:
                      - containerPort: 27017
                  readinessProbe:
                      tcpSocket:
                          port: 27017
                      periodSeconds: 10
                      initialDelaySeconds: 5
                  livenessProbe:
                      tcpSocket:
                          port: 27017
                      periodSeconds: 20
                      initialDelaySeconds: 15
                  resources:
                      requests:
                          cpu: 50m
                          memory: 1000Mi
                      limits:
                          cpu: 100m
                          memory: 1000Mi
                  volumeMounts:
                      - name: data-mongo
                        mountPath: /data/db
            volumes:
                - name: data-mongo
                  PersistentVolumeClaim:
                      claimName: mongodb-claim
---
apiVersion: v1
kind: Service
metadata:
    name: mongodb-service
spec:
    selector:
        app: mongodb
    ports:
        - protocol: TCP
          port: 27017
          targetPort: 27071
